# quadrupedal_walking_controller

./: .gitignore  README.md  package.xml  requirements.txt  setup.cfg  setup.py
quad_gaits/: trot.py
scripts/: quad_walk.py  quad_walk_mult.py  wandb_quad_walk_regression.py
